[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buildings/Land.gd" type="Script" id=1]
[ext_resource path="res://Buildings/DroneGarage.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 4, 0.2, 4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.1, 0.2, 2.1 )

[node name="Land" type="Spatial"]
script = ExtResource( 1 )
GarageScene = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="DroneParkingSpace" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.204958, 0 )

[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
